requests tested and auth system
