# app/Http/Requests/Auth/LoginRequest.php
@@ -1,10 +1,10 @@
 <?php
 
-namespace App\Http\Requests\Users;
+namespace App\Http\Requests\Auth;
 
 use Illuminate\Foundation\Http\FormRequest;
 
-class UpdatePasswordUserRequest extends FormRequest
+class LoginRequest extends FormRequest
 {
     /**
      * Determine if the user is authorized to make this request.
@@ -24,9 +24,8 @@ class UpdatePasswordUserRequest extends FormRequest
     public function rules()
     {
         return [
-            'fullname' => 'required|string',
-            'email' => 'required|email|unique:users,email,',
-            'cpf' => 'required|string|unique:users,cpf,'
+            'email' => 'required|email',
+            'password' => 'required|string'
         ];
     }
 }
