# app/Http/Requests/Auth/UpdateCredentialsRequest.php
@@ -1,10 +1,10 @@
 <?php
 
-namespace App\Http\Requests\Users;
+namespace App\Http\Requests\Auth;
 
 use Illuminate\Foundation\Http\FormRequest;
 
-class UpdateUserRequest extends FormRequest
+class UpdateCredentialsRequest extends FormRequest
 {
     /**
      * Determine if the user is authorized to make this request.
@@ -24,9 +24,7 @@ class UpdateUserRequest extends FormRequest
     public function rules()
     {
         return [
-            'fullname' => 'required|string',
-            'email' => 'required|email|unique:users,email,',
-            'cpf' => 'required|string|unique:users,cpf,'
+            'password' => 'required|string'
         ];
     }
 }
